syntax = "proto3";

package proto.viam.app.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "proto/tagger/v1/tagger.proto";

option go_package = "go.viam.com/api/proto/viam/app/v1";

service AppService {
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);

  rpc ListLocations(ListLocationsRequest) returns (ListLocationsResponse);

  rpc LocationAuth(LocationAuthRequest) returns (LocationAuthResponse);

  // Get a specific robot by ID
  rpc GetRobot(GetRobotRequest) returns (GetRobotResponse);

  rpc GetRobotParts(GetRobotPartsRequest) returns (GetRobotPartsResponse);

  // Get a specific robot part by ID
  rpc GetRobotPart(GetRobotPartRequest) returns (GetRobotPartResponse);

  rpc GetRobotPartLogs(GetRobotPartLogsRequest) returns (GetRobotPartLogsResponse);

  rpc TailRobotPartLogs(TailRobotPartLogsRequest) returns (stream TailRobotPartLogsResponse);

  // Get a specific robot part histy by ID
  rpc GetRobotPartHistory(GetRobotPartHistoryRequest) returns (GetRobotPartHistoryResponse);

  // Update a robot
  rpc UpdateRobotPart(UpdateRobotPartRequest) returns (UpdateRobotPartResponse);

  // Create a new robot part
  rpc NewRobotPart(NewRobotPartRequest) returns (NewRobotPartResponse);

  // Marks the given part as the main part, and all the others as not
  rpc MarkPartAsMain(MarkPartAsMainRequest) returns (MarkPartAsMainResponse);

  // Finds robots given a query
  rpc FindRobots(FindRobotsRequest) returns (FindRobotsResponse);

  // NewRobot creates a new robot
  rpc NewRobot(NewRobotRequest) returns (NewRobotResponse);

  // UpdateRobot updates a robot
  rpc UpdateRobot(UpdateRobotRequest) returns (UpdateRobotResponse);

  // DelteRobot deletes a robot
  rpc DeleteRobot(DeleteRobotRequest) returns (DeleteRobotResponse);
}

message Robot {
  string id = 1 [(tagger.v1.tags) = "bson:\"_id\" json:\"id,omitempty\""];
  string name = 2 [(tagger.v1.tags) = "bson:\"name\" json:\"name\""];
  string location = 3 [(tagger.v1.tags) = "bson:\"location\" json:\"location\""];
  google.protobuf.Timestamp last_access = 4 [(tagger.v1.tags) = "bson:\"last_access\" json:\"last_access\""];
}

message RobotPart {
  string id = 1 [(tagger.v1.tags) = "bson:\"_id\" json:\"id,omitempty\""];
  string name = 2 [(tagger.v1.tags) = "bson:\"name\" json:\"name\""];
  string secret = 3 [(tagger.v1.tags) = "bson:\"secret\" json:\"secret,omitempty\""];
  string robot = 4 [(tagger.v1.tags) = "bson:\"robot\" json:\"robot\""];
  google.protobuf.Struct robot_config = 5 [(tagger.v1.tags) = "bson:\"config\" json:\"robot_config\""];
  google.protobuf.Timestamp last_access = 6 [(tagger.v1.tags) = "bson:\"last_access\" json:\"last_access\""];
  google.protobuf.Struct user_supplied_info = 7 [(tagger.v1.tags) = "bson:\"user_supplied_info\" json:\"user_supplied_info\""];
  bool main_part = 8 [(tagger.v1.tags) = "bson:\"main_part\" json:\"main_part\""];
  string fqdn = 9;
}

message RobotPartHistoryEntry {
  string part = 1 [(tagger.v1.tags) = "bson:\"part\" json:\"part\""];
  string robot = 2 [(tagger.v1.tags) = "bson:\"robot\" json:\"robot\""];
  google.protobuf.Timestamp when = 3 [(tagger.v1.tags) = "bson:\"when\" json:\"when\""];
  RobotPart old = 4 [(tagger.v1.tags) = "bson:\"old\" json:\"old\""];
}

message ListOrganizationsRequest {}

message Organization {
  string id = 1;
  string name = 2;
}

message ListOrganizationsResponse {
  repeated Organization organizations = 1;
}

message Location {
  string id = 1;
  string name = 2;
}

message ListLocationsRequest {
  string organization_id = 1;
}

message ListLocationsResponse {
  repeated Location locations = 1;
}

message LocationAuth {
  string secret = 1;
}

message LocationAuthRequest {
  string location_id = 1;
}

message LocationAuthResponse {
  LocationAuth auth = 1;
}

message GetRobotRequest {
  string id = 1;
}

message GetRobotResponse {
  Robot robot = 1;
}

message GetRobotPartsRequest {
  string robot_id = 1;
}

message GetRobotPartsResponse {
  repeated RobotPart parts = 1;
}

message GetRobotPartRequest {
  string id = 1;
}

message GetRobotPartResponse {
  RobotPart part = 1;
  string config_json = 2;
}

message GetRobotPartLogsRequest {
  string id = 1;
  bool errors_only = 2;
}

message LogEntry {
  string host = 1;
  string level = 2;
  google.protobuf.Timestamp time = 3;
  string logger_name = 4;
  string message = 5;
  google.protobuf.Struct caller = 6;
  string stack = 7;
  repeated google.protobuf.Struct fields = 8;
}

message GetRobotPartLogsResponse {
  repeated LogEntry logs = 1;
}

message TailRobotPartLogsRequest {
  string id = 1;
  bool errors_only = 2;
}

message TailRobotPartLogsResponse {
  repeated LogEntry logs = 1;
}

message GetRobotPartHistoryRequest {
  string id = 1;
}

message GetRobotPartHistoryResponse {
  repeated RobotPartHistoryEntry history = 1;
}

message UpdateRobotPartRequest {
  string id = 1;
  string name = 2;
  google.protobuf.Struct robot_config = 3;
}

message UpdateRobotPartResponse {
  RobotPart part = 1;
}

message NewRobotPartRequest {
  string robot_id = 1;
  string part_name = 2;
}

message NewRobotPartResponse {
  string part_id = 1;
}

message Fragment {
  string id = 1 [(tagger.v1.tags) = "bson:\"_id\" json:\"id,omitempty\""];
  string name = 2 [(tagger.v1.tags) = "bson:\"name\" json:\"name\""];
  google.protobuf.Struct fragment = 3 [(tagger.v1.tags) = "bson:\"fragment\" json:\"fragment\""];
  string organization_owner = 4 [(tagger.v1.tags) = "bson:\"organization_owner\" json:\"owner\""];
  bool public = 5 [(tagger.v1.tags) = "bson:\"public\" json:\"public\""];
}

message FindRobotsRequest {
  string location_id = 1;
}

message FindRobotsResponse {
  repeated Robot robots = 1;
}

message NewRobotRequest {
  string name = 1;
  string location = 2;
}

message NewRobotResponse {
  string id = 1;
}

message UpdateRobotRequest {
  string id = 1;
  string name = 2;
  string location = 3;
}

message UpdateRobotResponse {
  Robot robot = 1;
}

message DeleteRobotRequest {
  string id = 1;
}

message DeleteRobotResponse {}

message MarkPartAsMainRequest {
  string part_id = 1;
}

message MarkPartAsMainResponse {}
