syntax = "proto3";

package proto.viam.datasync.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "go.viam.com/api/proto/viam/datasync/v1";


service DataSyncService {
  rpc Upload(stream proto.viam.datasync.v1.UploadRequest) returns (proto.viam.datasync.v1.UploadResponse);
}

message SensorMetadata {
  google.protobuf.Timestamp time_requested = 1;
  google.protobuf.Timestamp time_received = 2;
}

message SensorData {
  SensorMetadata metadata = 1;
  oneof data {
    google.protobuf.Struct struct = 2;
    bytes binary = 3;
  }
}

message NonSensorMetadata {
  // maxhorowitz: unsure what would go in here, TODO
}

message NonSensorData {
  NonSensorMetadata metadata = 1;
  bytes arbitrary_data = 2; 
}

message UploadMetadata {
  string part_name = 1;
  string component_name = 2;
  string method_name = 3;
  DataType type = 4;
  string file_name_extension = 5;
}

message UploadRequest {
  oneof upload_packet {
    UploadMetadata metadata = 1;
    SensorData sensor_contents = 2;
    NonSensorData nonsensor_contents = 3;
  }
}

message UploadResponse {}

enum  DataType {
  DATA_TYPE_UNSPECIFIED = 0;
  DATA_TYPE_BINARY = 1;
  DATA_TYPE_TABULAR = 2;
  DATA_TYPE_ARBITRARY = 3;
}

message SensorTimeInterval {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message NonSensorSyncTime {
  google.protobuf.Timestamp sync_time = 1;
}

message RelevantTime {
  oneof time {
    SensorTimeInterval sensor = 1;
    NonSensorSyncTime nonsensor = 2;
  }
}

message SyncedFile {
  RelevantTime relevant_time = 1;
  string org_id = 2;
  string robot_id = 3;
  string part_id = 4;
  string component_name = 5;
  string component_type = 6;
  string component_model = 7;
  string method_name = 8;
  string blob_path = 9;
  DataType data_type = 10;
  // Only DataType.TABULAR data has column_names
  repeated string column_names = 11;
}